# rsspot-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  sparkify.config.json
.github/workflows/: docs-ci.yml  docs-pages.yml  release.yml
.sparkify-docs/: batches.json  state.json
docs/: architecture.mdx  changelog.mdx  cli-reference.mdx  configuration.md  configuration.mdx  contributing.mdx  deployment.mdx  docs.json  getting-started.mdx  index.mdx  openapi.md  openapi.mdx  rewrite-evidence.json  rewrite-method.md  sdk-usage.mdx  troubleshooting.mdx
docs/modules/: rsspot.mdx  scripts.mdx  src.mdx  tests.mdx
openapi/: README.md
scripts/: generate_openapi_index.py  sync_openapi.py
src/rsspot/: __init__.py  auth.py  cli.py  cli_history.py  client.py  constants.py  errors.py  pricing_optimizer.py  settings.py
src/rsspot/client/: __init__.py  async_client.py  singleton.py  sync_client.py
src/rsspot/config/: __init__.py  loader.py  manager.py  models.py
src/rsspot/http/: __init__.py  cache.py  retry.py  transport.py
src/rsspot/models/: __init__.py  cloudspaces.py  common.py  events.py  nodepools.py  organizations.py  pricing.py  regions.py  server_classes.py
src/rsspot/services/: __init__.py  base.py  cloudspaces.py  inventory.py  nodepools.py  organizations.py  pricing.py  regions.py  server_classes.py
src/rsspot/state/: __init__.py  store.py
src/rsspot/utils/: output.py  serialization.py
src/rsspot/workflows/: __init__.py  registration.py
tests/: test_auth.py  test_cli_pricing.py  test_client.py  test_config.py  test_pricing_optimizer.py  test_state.py  test_workflows_registration.py
